# ims-core-dev

./: .dockerignore  .env.example  .gitignore  AUDIT-SUMMARY.md  COMPLETE.md  Cargo.toml  DELIVERY-MANIFEST.md  DEPLOYMENT-PACKAGE.md  DOCKER_CHECKLIST.md  DOCKER_README.md  Dockerfile  FILE-INDEX.md  HONESTY-SCORING-FRAMEWORK.md  IMPLEMENTATION-GUIDE.md  IMPLEMENTATION-SUMMARY.md  IMS-TUI-IMPLEMENTATION-GUIDE.md  INDEX.md  PUSH-TO-GITHUB.md  README.md  README_ORG.md  SOURCE-CODE-GUIDE.md  START-HERE.md  TESTING-REPORT-TUI.md  VISUAL-SUMMARY.md  deploy-to-github.sh  docker-compose.obs.yml  docker-compose.prod.yml  docker-compose.yml  docker.cmd  docker.sh  quick-deploy.sh  requirements-dev.txt  requirements.txt  requirements.txt.bak  setup.py
docs/: ADR-0005-policy-enforcement.md  EPIC-5-INTEGRATION-GUIDE.md  IMPLEMENTATION-CHECKLIST.md  MIDPOINT-GUIDE.md
ims-tui/: .env.example  .gitignore  Cargo.toml  Folder-Structure.ini  README.md  SPEC-TUI-INTERFACE.md
ims-tui/docs/: ADR-002-RUST-RATATUI-SELECTION.md  ARCHITECTURE.md
ims-tui/src/: main.rs
ims-tui/src/app/: api.rs  mod.rs  settings.rs
ims-tui/src/core/: commands.rs  effects.rs  events.rs  mod.rs  reduce.rs
ims-tui/src/handlers/: mod.rs  scroll.rs
ims-tui/src/ui/: command_palette.rs  editor.rs  inspector.rs  mod.rs  settings.rs  sidebar.rs
schemas/: model_registry.sql  model_registry_extension.sql  policy_registry.sql
scripts/: ims-gemini.sh  ims-status.sh  populate_model_registry.py  seed-models.sh  setup-epic3.sh  setup-midpoint.sh
seed/: 01_seed_models.sql  02_seed_policies.sql
src/: __init__.py
(+83 files in other folders)
