[package]
name = "ims-tui"
version = "1.0.0"
edition = "2021"
authors = ["StewardshipAI <contact@stewardshipsolutions.com>"]
description = "Enterprise-grade Terminal UI for Intelligent Model Switching"
license = "Apache-2.0"
repository = "https://github.com/StewardshipAI/ims-tui"

[dependencies]
# Terminal UI Framework
ratatui = "0.28.1"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-tree-widget = "0.22"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP Client for API Integration
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket for Real-Time Metrics
tokio-tungstenite = "0.24"

# Configuration & Environment
config = "0.14"
dotenv = "0.15"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Time & Date
chrono = "0.4"

# UUID Generation
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "ims-tui"
path = "src/main.rs"
